=== master

* Deprecate Database#{add,remove}_servers when not using a sharded connection pool (jeremyevans)

* Deprecate Database#each_server (jeremyevans)

* Make Model#_valid? private method accept only an options hash (jeremyevans)

* Deprecate returning false from model before hooks to cancel the action, use Model#cancel_action (jeremyevans)

* Handle Model#cancel_action correctly in before hooks when Model#valid? is called (jeremyevans)

* Deprecate Sequel::BeforeHookFailed (jeremyevans)

* Deprecate passing multiple arguments as filter arguments when not using a conditions specifier (jeremyevans)

* Deprecate passing Procs as filter arguments, require they be passed as blocks (jeremyevans)

* Deprecate Sequel::Error::* exception class aliases (jeremyevans)

* Deprecate prepared_statements_associations and prepared_statements_with_pk plugins (jeremyevans)

* Deprecate Sequel::Unbinder, Sequel::UnbindDuplicate, and Dataset#unbind (jeremyevans)

* Deprecating calling Sequel::Qualifier with two arguments (jeremyevans)

* Add validation_contexts plugin for supporting custom contexts when validating (jeremyevans)

* Deprecate Sequel::Database.single_threaded singleton accessor (jeremyevans)

* Deprecate treating unrecognized prepared statement type as :select (jeremyevans)

* Deprecate Sequel.identifier_{in,out}put_method= and .quote_identifiers= singleton setters (jeremyevans)

* Deprecate Sequel::Database.identifier_{in,out}put_method and .quote_identifiers singleton accessors (jeremyevans)

* Deprecate loading the identifier_mangling by default, require it be loaded explicitly if needed (jeremyevans)

* Make Database#dump_{table_schema,schema_migration} in schema_dumper extension support :schema option (dadario) (#1328)

* Make Dataset#delete respect an existing limit on Microsoft SQL Server (jeremyevans)

* Add Dataset#skip_limit_check to mark a dataset as skipping the limit/offset check for updates and deletes (jeremyevans)
