@@ -56,6 +56,7 @@
 </ul></li>
 <li>Saving:<ul>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/BeforeAfterSave.html">before_after_save</a>: Refreshes created objects and resets modified flag before calling after_create/update/save hooks.</li>
+<li><a href="rdoc-plugins/classes/Sequel/Plugins/ColumnsUpdated.html">columns_updated</a>: Makes columns hash used for updates available in after_update and after_save hooks.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/IdentifierColumns.html">identifier_columns</a>: Automatically handles column names with 2 or more consecutive underscores when saving.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/InstanceFilters.html">instance_filters</a>: Allows you to add per instance filters that are used when updating or destroying the instance.</li>
 <li><a href="rdoc-plugins/classes/Sequel/Plugins/MssqlOptimisticLocking.html">mssql_optimistic_locking</a>: Uses a timestamp/rowversion column on Microsoft SQL Server to prevent concurrent updates overwriting changes.</li>
